<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">securityscanner</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="root_status">root_status</string>
    <string name="nfc_status">nfc_status</string>
    <string name="bluetooth_status">bluetooth_status</string>
    <string name="lock_status">lock_status</string>
	<string name="unknown_status">unknown_status</string>
	<string name="encrypted_status">encrypted_status</string>
	<string name="location_status">location_status</string>
	<string name="simlock_status">simlock_status</string>
	<string name="wifi_history">wifi_history</string>
</resources>
