<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.securityscanner.MainActivity" >

    <TextView
		android:id="@+id/id_root_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/root_status"/>
    <TextView
		android:id="@+id/id_nfc_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_root_status"
        android:text="@string/nfc_status"/>
    <TextView
		android:id="@+id/id_bluetooth_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_nfc_status"
        android:text="@string/nfc_status"/>
    <TextView
		android:id="@+id/id_lock_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_bluetooth_status"
        android:text="@string/lock_status"/>
    <TextView
		android:id="@+id/id_unknown_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_lock_status"
        android:text="@string/unknown_status"/>
    <TextView
		android:id="@+id/id_encrypted_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_unknown_status"
        android:text="@string/encrypted_status"/>
	<TextView
		android:id="@+id/id_location_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_encrypted_status"
        android:text="@string/location_status"/>
	<TextView
		android:id="@+id/id_simlock_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_location_status"
        android:text="@string/simlock_status"/>
	<TextView
		android:id="@+id/id_wifi_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_simlock_status"
        android:text="@string/wifi_history"/>
</RelativeLayout>
